# opennurbs

./: CMakeLists.txt  opennurbs.vcxproj  opennurbs.vcxproj.metaproj  opennurbs_annotationbase.cpp  opennurbs_annotationbase.h  opennurbs_archive_manifest.cpp  opennurbs_dimension.cpp  opennurbs_dimension.h  opennurbs_dimensionstyle.cpp  opennurbs_file_utilities.cpp  opennurbs_freetype.cpp  opennurbs_freetype.h  opennurbs_freetype_include.h  opennurbs_internal_V2_annotation.cpp  opennurbs_internal_V5_annotation.cpp  opennurbs_internal_Vx_annotation.cpp  opennurbs_internal_glyph.h  opennurbs_leader.cpp  opennurbs_leader.h  opennurbs_locale.cpp  opennurbs_model_component.cpp  opennurbs_model_component.h  opennurbs_model_geometry.cpp  opennurbs_model_geometry.h  opennurbs_public.h  opennurbs_public.sln  opennurbs_public.vcxproj  opennurbs_public.vcxproj.metaproj  opennurbs_public_examples.h  opennurbs_public_staticlib.vcxproj  opennurbs_public_staticlib.vcxproj.metaproj  opennurbs_public_version.h  opennurbs_sha1.cpp  opennurbs_staticlib.vcxproj  opennurbs_staticlib.vcxproj.metaproj  opennurbs_statics.cpp  opennurbs_string_compare.cpp  opennurbs_string_format.cpp  opennurbs_string_value.h  opennurbs_string_values.cpp  (+27 more)
example_brep/example_brep.xcodeproj/: project.pbxproj
example_convert/example_convert.xcodeproj/: project.pbxproj
example_read/example_read.xcodeproj/: project.pbxproj
freetype263/: CMakeLists.txt
opennurbs_public.xcodeproj/: project.pbxproj
opennurbs_public.xcworkspace/: contents.xcworkspacedata
zlib/: zlib.vcxproj  zlib.vcxproj.metaproj
(+62 files in other folders)
